# packages/shared/src/dto/health.ts
@@ -1,7 +1,8 @@
 import {Type, type Static} from 'typebox';
+import {defineDto} from './define';
 
-export const HealthStatusSchema = Type.Object({
+export const [HealthStatusSchema, HealthStatusRef] = defineDto('HealthStatus', Type.Object({
     status: Type.Literal('ok'),
-});
+}));
 
 export type HealthStatus = Static<typeof HealthStatusSchema>;
